--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "treeboxjs",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": " Display and navigate hierarchical views ",
   "main": "./dist/index.js",
   "directories": {
@@ -16,12 +16,12 @@
     "gulp-replace": "^1.0.0",
     "gulp-strip-comments": "^2.5.2",
     "terser": "^4.6.11",
-    "through2": "^3.0.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   },
   "scripts": {
-    "build": "gulp --gulpfile ./gulpfile.js && terser --compress --mangle --output dist/index.js -- dist/index.js"
+    "build": "webpack && gulp --gulpfile ./gulpfile.browser.js && terser --compress --mangle --output dist/index.browser.js -- dist/index.browser.js",
+    "build:browser": "gulp --gulpfile ./gulpfile.browser.js && terser --compress --mangle --output dist/index.browser.js -- dist/index.browser.js"
   },
   "repository": {
     "type": "git",
